[package]
name = "databend-common-cloud-control"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = false

[dependencies]
async-backtrace = { workspace = true }
chrono = { workspace = true }
databend-common-base = { path = "../base" }
databend-common-exception = { path = "../exception" }
prost = { workspace = true }
tonic = { workspace = true }
prost-types = "0.12.3"

[build-dependencies]
lenient_semver = "0.4.2"
prost-build = { workspace = true }
semver = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
tower = { version = "0.4" }
